# pandoc-filters

./: LICENSE  README.md  pandoc-filters.cabal  stack.yaml
.github/workflows/: ci.yml
app/: LatexifyLocators.hs  PandocifyLocators.hs
