name:                pandoc-filters
version:             0.2.0.0
synopsis:            pandoc filters for my PhD thesis
description:         Please see README.md
homepage:            https://github.com/cruessler/pandoc-filters#readme
license:             MIT
license-file:        LICENSE
author:              Christoph Rüßler
maintainer:          christoph.ruessler@mailbox.org
copyright:           2016–2018 Christoph Rüßler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable latexify-locators
  hs-source-dirs:      app
  main-is:             LatexifyLocators.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson >= 0.7 && < 1.3
                     , pandoc-types == 1.17.0.5
  default-language:    Haskell2010

executable pandocify-locators
  hs-source-dirs:      app
  main-is:             PandocifyLocators.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson >= 0.7 && < 1.3
                     , pandoc-types == 1.17.0.5
                     , regex-posix >= 0.95
  default-language:    Haskell2010

test-suite pandoc-filters-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cruessler/pandoc-filters
